[gd_scene load_steps=15 format=2]

[ext_resource path="res://Activos/ImagesBG/19309450805_55c1e5c030_b.jpg" type="Texture" id=1]
[ext_resource path="res://Activos/Fonts/Kenney High.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Activos/UI Base Pack/PNG/blue_button00.png" type="Texture" id=3]
[ext_resource path="res://Activos/UI Base Pack/PNG/red_button11.png" type="Texture" id=4]
[ext_resource path="res://Activos/ImagesBG/Monterrey_entre_el_Obispado_y_el_Cerro_de_la_Silla_1904.jpg" type="Texture" id=5]
[ext_resource path="res://Activos/ImagesBG/Hornos_fundidora3.JPG" type="Texture" id=6]
[ext_resource path="res://Activos/ImagesBG/Cerro_de_la_Silla.jpg" type="Texture" id=7]
[ext_resource path="res://Activos/ImagesBG/Steel_mill_Fundidora_Park.jpg" type="Texture" id=8]
[ext_resource path="res://Escenas/PantallaInicio.gd" type="Script" id=9]
[ext_resource path="res://Activos/UI Base Pack/PNG/grey_button00.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "disolvencias"
length = 13.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fondo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 4.1, 7.1, 10, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fondo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 2.1, 3.1, 4.1, 5.1, 6.1, 7.1, 8.1, 9.1, 10, 11.1, 12, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.544118 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.392157 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Fondo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.607843 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Titulo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Titulo:custom_constants/shadow_offset_x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Titulo:custom_constants/shadow_offset_y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.607843 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PantallaInicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Solicitudes" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -1088.87, 100.665 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="biblioteca" type="HTTPRequest" parent="Solicitudes"]

[node name="teatro" type="HTTPRequest" parent="Solicitudes"]

[node name="museo" type="HTTPRequest" parent="Solicitudes"]

[node name="libreria" type="HTTPRequest" parent="Solicitudes"]

[node name="casa_artesania" type="HTTPRequest" parent="Solicitudes"]

[node name="galeria" type="HTTPRequest" parent="Solicitudes"]

[node name="universidad" type="HTTPRequest" parent="Solicitudes"]

[node name="centro_cultural" type="HTTPRequest" parent="Solicitudes"]

[node name="centro_desarrollo_indigena" type="HTTPRequest" parent="Solicitudes"]

[node name="comp_cine" type="HTTPRequest" parent="Solicitudes"]

[node name="fototeca" type="HTTPRequest" parent="Solicitudes"]

[node name="fonoteca" type="HTTPRequest" parent="Solicitudes"]

[node name="catedral" type="HTTPRequest" parent="Solicitudes"]

[node name="festival" type="HTTPRequest" parent="Solicitudes"]

[node name="Fondo" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.226607
anchor_top = 0.155609
anchor_right = 0.797441
anchor_bottom = 0.226702
margin_left = 1.84265
margin_top = 0.820923
margin_right = 41.8427
margin_bottom = 14.8209
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.270588, 0.533333, 0.4, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 10
text = "RPG Turismo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.369684
anchor_top = 0.710855
anchor_right = 0.369684
anchor_bottom = 0.710855
margin_right = 200.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="JuegoNuevo" type="TextureButton" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 49.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/JuegoNuevo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -11.0
custom_fonts/font = SubResource( 2 )
text = "juego nuevo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinuarJuego" type="TextureButton" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 200.0
margin_bottom = 102.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ContinuarJuego"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -11.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/disolvencias = SubResource( 3 )
anims/intro = SubResource( 4 )

[connection signal="request_completed" from="Solicitudes/biblioteca" to="." method="_on_biblioteca_request_completed"]
[connection signal="request_completed" from="Solicitudes/teatro" to="." method="_on_teatro_request_completed"]
[connection signal="request_completed" from="Solicitudes/museo" to="." method="_on_museo_request_completed"]
[connection signal="request_completed" from="Solicitudes/libreria" to="." method="_on_libreria_request_completed"]
[connection signal="request_completed" from="Solicitudes/casa_artesania" to="." method="_on_casa_artesania_request_completed"]
[connection signal="request_completed" from="Solicitudes/galeria" to="." method="_on_galeria_request_completed"]
[connection signal="request_completed" from="Solicitudes/universidad" to="." method="_on_universidad_request_completed"]
[connection signal="request_completed" from="Solicitudes/centro_cultural" to="." method="_on_centro_cultural_request_completed"]
[connection signal="request_completed" from="Solicitudes/centro_desarrollo_indigena" to="." method="_on_centro_desarrollo_indigena_request_completed"]
[connection signal="request_completed" from="Solicitudes/comp_cine" to="." method="_on_comp_cine_request_completed"]
[connection signal="request_completed" from="Solicitudes/fototeca" to="." method="_on_fototeca_request_completed"]
[connection signal="request_completed" from="Solicitudes/fonoteca" to="." method="_on_fonotecas_request_completed"]
[connection signal="request_completed" from="Solicitudes/catedral" to="." method="_on_catedral_request_completed"]
[connection signal="request_completed" from="Solicitudes/festival" to="." method="_on_festival_request_completed"]
[connection signal="pressed" from="VBoxContainer/JuegoNuevo" to="." method="_on_JuegoNuevo_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinuarJuego" to="." method="_on_ContinuarJuego_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
